--- a/pom.xml
+++ b/pom.xml
@@ -105,11 +105,21 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
-        <!-- mybatis-plus 3.5.3 才支持 spring boot 3-->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>3.0.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.5.15</version>
+        </dependency>
+        <!-- mybatis-plus 3.5.3 以上 才支持 spring boot 3-->
         <dependency>
             <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-boot-starter</artifactId>
-            <version>3.5.3</version>
+            <artifactId>mybatis-plus</artifactId>
+            <version>3.5.4.1</version>
         </dependency>
         <!-- Spring Boot Starter JDBC -->
         <dependency>
