增加了地图页、维修、用户页的路由 初步设计了地图也，维修表单

--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "@vueuse/motion": "^2.0.0",
     "animate.css": "^4.1.1",
     "axios": "^1.4.0",
+    "create-vite": "^5.2.1",
     "dayjs": "^1.11.8",
     "echarts": "^5.4.2",
     "element-plus": "2.3.6",
     "js-cookie": "^3.0.5",
+    "less": "^4.2.0",
     "mitt": "^3.0.0",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
