1.修改了路由 2.修改主页为地图，修复了地图不能显示的问题 3.修改了logo和title

--- a/public/platform-config.json
+++ b/public/platform-config.json
@@ -1,6 +1,6 @@
 {
   "Version": "5.2.0",
-  "Title": "PureAdmin",
+  "Title": "擎源后台管理",
   "FixedHeader": true,
   "HiddenSideBar": false,
   "MultiTagsCache": false,
