--- a/public/platform-config.json
+++ b/public/platform-config.json
@@ -5,7 +5,7 @@
   "HiddenSideBar": false,
   "MultiTagsCache": false,
   "KeepAlive": true,
-  "Layout": "vertical",
+  "Layout": "horizontal",
   "Theme": "light",
   "DarkMode": false,
   "OverallStyle": "light",
